# agentbox

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SPEC.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs-deploy.yml
docker/: Dockerfile.controlplane  Dockerfile.credential-proxy  Dockerfile.egress-proxy  Dockerfile.runner  credential_proxy.py  entrypoint.sh  tinyproxy-allowlist.txt  tinyproxy.conf
docs/: REVIEW.md  architecture.md  design-decisions.md  development.md  getting-started.md  index.md
k8s/: job-template.yaml  kind-config.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  resource-quota.yaml  runtimeclass-gvisor.yaml
migrations/: 001_init.sql  002_runner_rls.sql  003_trace_context.sql
src/agentbox/: __init__.py  settings.py  tracing.py
src/agentbox/api/: __init__.py  main.py  routes.py
src/agentbox/cost/: __init__.py  tracker.py
src/agentbox/db/: __init__.py  migrate.py  queries.py
src/agentbox/launcher/: __init__.py  backend_docker.py  backend_k8s.py  warm_pool.py  worker.py
src/agentbox/mcp_server/: __init__.py  server.py
src/agentbox/runner/: __init__.py  agents.py  credentials.py  durable.py  durable_model.py  durable_tool.py  main.py
src/agentbox/secrets/: __init__.py  scoper.py
tests/e2e/: test_api.py  test_egress.py  test_kill_and_resume.py  test_worker_queue.py
tests/unit/: test_cost.py  test_credentials.py  test_durable.py  test_kill_and_resume.py  test_mcp_server.py  test_placeholder.py  test_scoper.py  test_tracing.py
