[project]
name = "agentbox"
version = "0.1.0"
description = "A minimal open-source agent platform — durable execution, sandboxed agents, Logfire tracing."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "docker>=7.2.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "logfire>=4.37.0",
    "pydantic-ai>=2.9.1",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbox"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
