[project]
name = "agentbox"
version = "0.1.0"
description = "A minimal open-source agent platform — durable execution, sandboxed agents, Logfire tracing."
requires-python = ">=3.12"
authors = [
    { name = "shenxianpeng" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pydantic",
    "Framework :: FastAPI",
]
dependencies = [
    "asyncpg>=0.31.0",
    "docker>=7.2.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "kubernetes>=30.0.0",
    "logfire>=4.37.0",
    "pydantic-ai>=2.9.1",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.15.21",
    "pyright>=1.1.400",
    "mkdocs-ng-material>=9.6.0",
]

[tool.mkdocs]
# mkdocs configuration is in mkdocs.yml at the project root

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbox"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = [
    "B904",  # raise-without-from-inside-except — explicit enough with logger.exception
    "RUF001", # ambiguous-unicode-character-string
    "RUF012", # mutable-class-defaults — common in pydantic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4", "RUF"]
"src/agentbox/api/routes.py" = ["B008"]  # Security() in default arg is standard FastAPI pattern

[tool.pyright]
include = ["src/agentbox"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = false
reportIncompatibleMethodOverride = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportGeneralTypeIssues = false
reportAttributeAccessIssue = false
reportArgumentType = false  # pydantic-ai Model interface evolves

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=agentbox --cov-report=term-missing"
